Remove the logging system in favor of the Log crate
1. Removed `log` module.
2. Added `Log` and `env_logger` as dev dependency.
3. s/println!/log macros/ in example servers.
4. Fixed documentation
5. Fixed tests
6. Use `println` instead of logging for startup messages because
   `env_logger` needs env vars to be set for them to be printed.
7. Removed dev dependency for `tempdir`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,7 +48,8 @@ optional = true
 
 [dev-dependencies]
 unicase = "1.0"
-tempdir = "0.3"
+log = "0.3.2"
+env_logger = "0.3.1"
 
 [build-dependencies]
 phf_codegen = "0.7"
