--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ documentation = "http://ogeon.github.io/docs/rustful/master/rustful/index.html"
 repository = "https://github.com/Ogeon/rustful"
 readme = "README.md"
 keywords = ["web", "rest", "framework", "http", "routing"]
-license = "MIT"
+license = "MIT OR Apache-2.0"
 build = "build/main.rs"
 
 [lib]
