Work around CI problems

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,7 +6,7 @@ skip_tags: true
 platform: x64
 os: MinGW
 environment:
-  OPENSSL_VERSION: 1_0_2j
+  OPENSSL_VERSION: 1_0_2k
 install:
   - cmd: SET PATH=C:\MINGW\bin\;C:\MINGW\msys\1.0\bin\;C:\Users\appveyor\.multirust\toolchains\stable\bin\;%PATH%
   - ps: Start-FileDownload "http://slproweb.com/download/Win32OpenSSL-$Env:OPENSSL_VERSION.exe"
