--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,9 @@ anymap = "0.12"
 phf = "0.7"
 num_cpus = "1"
 log = "0.3"
+serde= "1.0"
+serde_derive= "1.0"
+serde_json = "1.0"
 
 [dependencies.hyper]
 version = "0.10"
